--- a/style.scss
+++ b/style.scss
@@ -1,4 +1,5 @@
 @import "_nodepack/susy/sass/_susy.scss";
+@import "_nodepack/assets/stylesheets/_bootstrap.scss";
 @import "_nodepack/breakpoint-sass/stylesheets/_breakpoint.scss";
 @import "sass/_cdn.scss";
 @import "sass/_variable.scss";
