--- a/src/sass/_cdn.scss
+++ b/src/sass/_cdn.scss
@@ -1,9 +1,6 @@
-/*=============================================>>>>>
-= cdn css block =
-===============================================>>>>>*/
-/* normalize css */
-@import "https://cdnjs.cloudflare.com/ajax/libs/normalize/6.0.0/normalize.min.css";
-/* font awasome css */
-@import "https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css";
+/* Font awesome */
+@import "css/font-awesome.min.css";
+/* bootstrap css*/
+@import "css/bootstrap.min.css";
 /* owl carousel css */
-@import "https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.2.1/assets/owl.carousel.min.css";
+@import "css/owl.carousel.min.css";
