--- a/src/sass/_helper.scss
+++ b/src/sass/_helper.scss
@@ -1,9 +1,14 @@
-@mixin clearfix {
-  &:after,&:before {
+/*=============================================>>>>>
+= helper classes =
+===============================================>>>>>*/
+.clarfix {
+  &:after {
     content: "";
     display: table;
-  }
-  &:after {
     clear: both;
   }
 }
+
+
+/*= End of helper classes =*/
+/*=============================================<<<<<*/
