--- a/src/style.scss
+++ b/src/style.scss
@@ -1,8 +1,11 @@
 @import "_nodepack/susy/sass/_susy.scss";
 @import "_nodepack/breakpoint-sass/stylesheets/_breakpoint.scss";
+@import "_nodepack/typi-master/scss/_typi.scss";
+@import "_nodepack/modularscale/_modularscale.scss";
 @import "sass/_cdn.scss";
 @import "sass/_variable.scss";
 @import "sass/_helper.scss";
 @import "sass/_base.scss";
-@import "sass/_common.scss";
+@import "sass/typography.scss";
+@import "sass/_object.scss";
 @import "sass/_module.scss";
