--- a/src/sass/typography.scss
+++ b/src/sass/typography.scss
@@ -1,80 +1,93 @@
 /*=============================================>>>>>
 = typography style =
 ===============================================>>>>>*/
-$breakpoints: (
-  small: 768px,
-  large: 1200px
-);
-// modularscale map with typi.
-$typi-ms: (
-  null: 1.111,
-  small: 1.111,
-  large: 1.111
-);
-// typi typography maps
-$typi: (
-  base: (
-    null: (16px,1.4),
-    small: (18px),
-    large: (20px,1.5)
-  ),
-  h1: (
-    null: (8, vr(1.8)),
-    small: (8,vr(1.9)),
-    large: (8,vr(2))
-  ),
-  h2: (
-    null: (7,vr(1.6)),
-    small: (7,vr(1.7)),
-    large: (7,vr(1.8))
-  ),
-  h3: (
-    null: (6,vr(1.4)),
-    small: (6,vr(1.5)),
-    large: (6,vr(1.6))
-  ),
-  h4: (
-    null: (5,vr(1.2)),
-    small: (5,vr(1.3)),
-    large: (5,vr(1.4))
-  ),
-  h5: (
-    null: (4,vr(1)),
-    small: (4,vr(1.1)),
-    large: (4,vr(1.2))
-  )
-);
+html {
+  font-size: 14px;
+  line-height: 1.4;
+  @include breakpoint(490px) {
+    font-size: 16px;
+  }
+  @include breakpoint(768px) {
+    font-size: 18px;
+    line-height: 1.5;
+  }
+  @include breakpoint(992px) {
+    font-size: 20px;
+  }
+  @include breakpoint(1600px) {
+    font-size: 21px;
+    line-height: 1.6;
+  }
+}
+h1,.h1,h2,.h2,h3,.h3,h4,.h4 {
+  line-height: 1.8;
+}
+/*----------- h1 -----------*/
+h1,.h1 {
+  font-size: 33px;
+  @include breakpoint(490px) {
+    font-size: 36px;
+  }
+  @include breakpoint(768px) {
+    font-size: 41px;
+  }
+  @include breakpoint(992px) {
+    font-size: 46px;
+  }
+  @include breakpoint(1600px) {
+    font-size: 52px;
+  }
+}
 
-// typi initialization
-@include typi-init;
-/* h1 typography */
-h1 {
-  @include typi(h1);
-  margin: vr(.8) 0;
+/*----------- h2 -----------*/
+h2,.h2 {
+  font-size: 27px;
+  @include breakpoint(490px) {
+    font-size: 30px;
+  }
+  @include breakpoint(768px) {
+    font-size: 35px;
+  }
+  @include breakpoint(992px) {
+    font-size: 40px;
+  }
+  @include breakpoint(1600px) {
+    font-size: 46px;
+  }
 }
-/* h2 typography */
-h2 {
-  @include typi(h2);
-  margin: vr(.6) 0;
+
+/*----------- h3 -----------*/
+h3,.h3 {
+  font-size: 22px;
+  @include breakpoint(490px) {
+    font-size: 24px;
+  }
+  @include breakpoint(768px) {
+    font-size: 29px;
+  }
+  @include breakpoint(992px) {
+    font-size: 34px;
+  }
+  @include breakpoint(1600px) {
+    font-size: 40px;
+  }
 }
-/* h3 typography */
-h3 {
-  @include typi(h3);
-  margin: vr(.4) 0;
-}
-/* h4 typography */
-h4 {
-  @include typi(h4);
-  margin: vr(.3) 0;
-}
-/* h5 typography */
-h5 {
-  @include typi(h5);
-  margin: vr(.2) 0;
-}
-/* p typography */
-p {
-  margin: vr(.3) 0;
+
+/*----------- h4 -----------*/
+h4,.h4 {
+  font-size: 17px;
+  @include breakpoint(490px) {
+    font-size: 18px;
+  }
+  @include breakpoint(768px) {
+    font-size: 23px;
+  }
+  @include breakpoint(992px) {
+    font-size: 28px;
+  }
+  @include breakpoint(1600px) {
+    font-size: 34px;
+  }
 }
 
 
