base typography change to percentage

--- a/src/sass/typography.scss
+++ b/src/sass/typography.scss
@@ -2,20 +2,20 @@
 = typography style =
 ===============================================>>>>>*/
 html {
-  font-size: 14px;
+  font-size: 87.5%;
   line-height: 1.4;
   @include breakpoint(490px) {
-    font-size: 16px;
+    font-size: 100%;
   }
   @include breakpoint(768px) {
-    font-size: 18px;
+    font-size: 112.5%;
     line-height: 1.5;
   }
   @include breakpoint(992px) {
-    font-size: 20px;
+    font-size: 125%;
   }
   @include breakpoint(1600px) {
-    font-size: 21px;
+    font-size: 121.25%;
     line-height: 1.6;
   }
 }
