--- a/src/style.scss
+++ b/src/style.scss
@@ -1,3 +1,12 @@
+
+/* Table of content */
+/**
+  ## helper classes
+  ## Base style
+  ## Typography
+  ## objects
+*/
+
 @import "_nodepack/susy/sass/_susy.scss";
 @import "_nodepack/breakpoint-sass/stylesheets/_breakpoint.scss";
 @import "sass/_cdn.scss";
